--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,6 +1,145 @@
 @charset "UTF-8";
 /* CSS Document */
 
-nav {
-	background:#94070A;
+.jumbotron {
+	background-color: black;
+	width: 100%;
+	max-height: 200px;
+	height: 200px;
+}
+#left {
+	margin: 56px auto;
+	margin-left: 20px;
+	float: left;
+}
+#showing {
+	width: auto;
+	max-height: inherit;
+	margin: auto;
+}
+#right {
+	margin: 56px auto;
+	margin-right: 20px;
+	float: right;
+}
+#line-1 {
+	width: 90%;
+	margin: 5px auto 0;
+	border-style: solid;
+	border-width: 0;
+	border-top-width: 3px;
+}
+#line-2 {
+	width: 70%;
+	margin: 5px auto 0;
+	border-style: solid;
+	border-width: 0;
+	border-top-width: 2px;
+}
+#content {
+	text-align: center;
+	width: 50%;
+	margin: 5px auto;
+	border-style: solid;
+	border-width: 0;
+	border-left-width: 1px;
+	border-right-width: 1px;
+	padding: 5px 0;
+}
+#showcase {
+	display: flex;
+}
+.blurb {
+	text-align: center;
+	font-size: 12px;
+	margin: auto;
+}
+.blurb h5 {
+	font-size: 14px;
+	margin: 4px auto 0;
+}
+.blurb p {
+	margin: 4px auto 0
+}
+.icon {
+	margin: 0 auto;
+	height: 50px;
+	width: 50px;
+	border-width: 1px;
+	border-style: solid;
+	border-radius: 100%;
+}
+#hours {
+
+}
+footer,
+footer ul,
+footer ul li,
+footer ul li a {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  list-style: none;
+  line-height: 1;
+  display: block;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+footer:after,
+footer > ul:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+footer {
+  width: auto;
+  font-family: Raleway, sans-serif;
+  line-height: 1;
+	position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 0;
+  background-color: #333333;
+  text-align: center;
+}
+footer > ul > li {
+  float: right;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  perspective: 1000px;
+}
+footer.align-center > ul {
+  font-size: 0;
+  text-align: center;
+}
+footer.align-center > ul > li {
+  display: inline-block;
+  float: none;
+}
+footer.align-right > ul > li {
+  float: right;
+}
+footer > ul > li.align-left {
+  float: left;
+}
+footer > ul > li > a {
+  padding: 16px 20px;
+  font-size: 14px;
+  color: #ffffff;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+footer > ul > li > a.small-icon {
+	height: 20px;
+	width: 20px;
+	border-radius: 100%;
+	padding: 0;
+	margin: 13px;
 }
