--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -62,10 +62,10 @@
 .blurb p {
 	margin: 4px auto 0
 }
-.icon {
+.blurb .icon {
 	margin: 0 auto;
-	height: 50px;
-	width: 50px;
+	height: 60px;
+	width: 60px;
 	border-width: 1px;
 	border-style: solid;
 	border-radius: 100%;
@@ -138,9 +138,13 @@ footer > ul > li > a {
   text-decoration: none;
 }
 footer > ul > li > a.small-icon {
-	height: 20px;
-	width: 20px;
 	border-radius: 100%;
 	padding: 0;
-	margin: 13px;
+	margin: 10px;
+}
+footer > ul > li > a.small-icon > img {
+	height: 26px;
+	width: 26px;
+	border-radius: 100%;
+	padding: 0;
 }
