--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -5,34 +5,52 @@
 	background-color: black;
 	width: 100%;
 	max-height: 200px;
+	min-height: 200px;
 	height: 200px;
 	display: flex;
+	overflow: hidden;
+	position: relative;
+}
+.jumbotron button {
+	background-color: Transparent;
+	background-repeat:no-repeat;
+	border: none;
+	cursor:pointer;
+	overflow: hidden;
+	outline:none;
 }
 #left {
-	margin: 56px auto;
-	margin-left: 20px;
-	float: left;
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin: 56px 20px;
 }
 #showing {
-	width: auto;
-	max-height: inherit;
+	width: 80%;
+	min-height: inherit;
+	position: absolute;
+	top: 230px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
 	margin: auto;
 }
 #right {
-	margin: 56px auto;
-	margin-right: 20px;
-	float: right;
+	margin: 56px 20px;
+	position: absolute;
+	top: 0;
+	right: 0;
 }
 #line-1 {
 	width: 90%;
-	margin: 5px auto 0;
+	margin: 10px auto 0;
 	border-style: solid;
 	border-width: 0;
 	border-top-width: 3px;
 }
 #line-2 {
 	width: 70%;
-	margin: 5px auto 0;
+	margin: 7px auto 0;
 	border-style: solid;
 	border-width: 0;
 	border-top-width: 2px;
@@ -40,7 +58,7 @@
 #content {
 	text-align: center;
 	width: 50%;
-	margin: 5px auto;
+	margin: 7px auto;
 	border-style: solid;
 	border-width: 0;
 	border-left-width: 2px;
@@ -66,7 +84,7 @@
 	margin: 0 auto;
 	height: 60px;
 	width: 60px;
-	border-width: 1px;
+	border-width: 0px;
 	border-style: solid;
 	border-radius: 100%;
 }
