--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -125,11 +125,11 @@ footer {
   width: auto;
   font-family: Raleway, sans-serif;
   line-height: 1;
-	position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 0;
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
   background-color: #333333;
   text-align: center;
 }
@@ -161,14 +161,24 @@ footer > ul > li > a {
   text-transform: uppercase;
   text-decoration: none;
 }
-footer > ul > li > a.small-icon {
+footer > ul > li > ul {
+	display: inline-flex;
+}
+footer > ul > li > ul > li > a.small-icon {
 	border-radius: 100%;
 	padding: 0;
 	margin: 10px;
 }
-footer > ul > li > a.small-icon > img {
+footer > ul > li > ul > li > a.small-icon > img {
 	height: 26px;
 	width: 26px;
 	border-radius: 100%;
 	padding: 0;
+}
+@media (max-width: 758px) {
+	footer > ul > li,
+	footer > ul > li.align-left {
+		float: none;
+	}
+
 }
