--- a/docs/css/navbar.css
+++ b/docs/css/navbar.css
@@ -88,11 +88,11 @@ td {
   transform-style: preserve-3d;
 }
 #navbar > ul > li.active > a {
-  color: #dff2fa;
+  color: #bbbbbb;
 }
 #navbar > ul > li:hover > a,
 #navbar > ul > li > a:hover {
-  color: #dff2fa;
+  color: #bbbbbb;
   -webkit-transform: rotateX(90deg) translateY(-23px);
   -moz-transform: rotateX(90deg) translateY(-23px);
   transform: rotateX(90deg) translateY(-23px);
@@ -109,7 +109,7 @@ td {
   width: 100%;
   height: 100%;
   padding: 16px 20px;
-  color: #dff2fa;
+  color: #bbbbbb;
   background: #331414;
   content: attr(data-title);
   -webkit-transition: background 0.5s;
@@ -143,7 +143,7 @@ td {
 }
 #navbar.small-screen > ul > li:hover > a,
 #navbar.small-screen > ul > li > a:hover {
-  color: #dff2fa;
+  color: #bbbbbb;
   -webkit-transform: none;
   -moz-transform: none;
   transform: none;
@@ -178,8 +178,8 @@ td {
   height: 3px;
 }
 #navbar.small-screen #menu-button.menu-opened:after {
-  border-top: 2px solid #dff2fa;
-  border-bottom: 2px solid #dff2fa;
+  border-top: 2px solid #bbbbbb;
+  border-bottom: 2px solid #bbbbbb;
 }
 #navbar.small-screen #menu-button:before {
   content: "";
@@ -192,5 +192,5 @@ td {
   background: #ffffff;
 }
 #navbar.small-screen #menu-button.menu-opened:before {
-  background: #dff2fa;
+  background: #bbbbbb;
 }
