--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -60,7 +60,7 @@ p, h1, h3, h5 {
 #content {
 	text-align: center;
 	width: 50%;
-	margin: 7px auto;
+	margin: 30px auto;
 	border-style: solid;
 	border-width: 0;
 	padding: 5px 0;
@@ -93,4 +93,5 @@ p, h1, h3, h5 {
 }
 #hours p {
   margin-top: 5px;
+  margin-bottom: 30px;
 }
